* Fri Dec 14 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
- Fix infinite recursion issue in the SH profile script

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0
- Update to Hiera 5

* Mon Oct 15 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0
- Documented known limitation and work around README for TLOG hanging
  on second window issue.

* Fri Oct 12 2018 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.0
- Documentation updates

* Thu Jul 19 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Initial release