@@ -1,27 +1,13 @@
 ---
 fixtures:
   repositories:
-    augeasproviders_core:
-      repo: https://github.com/simp/augeasproviders_core
-      ref: master
-    augeasproviders:ssh:
-      repo: https://github.com/simp/augeasproviders_ssh
-      ref: master
-    logrotate:
-      repo: https://github.com/simp/pupmod-simp-logrotate
-      ref: master
-    rsyslog:
-      repo: https://github.com/simp/pupmod-simp-rsyslog
-      ref: master
-    simplib:
-      repo: https://github.com/simp/pupmod-simp-simplib
-      ref: master
-    ssh:
-      repo: https://github.com/simp/pupmod-simp-ssh
-      ref: master
-    stdlib:
-      repo: https://github.com/simp/puppetlabs-stdlib
-      ref: master
+    augeasproviders_core: https://github.com/simp/augeasproviders_core
+    augeasproviders:ssh: https://github.com/simp/augeasproviders_ssh
+    logrotate: https://github.com/simp/pupmod-simp-logrotate
+    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
+    simplib: https://github.com/simp/pupmod-simp-simplib
+    ssh: https://github.com/simp/pupmod-simp-ssh
+    stdlib: https://github.com/simp/puppetlabs-stdlib
     systemd:
       repo: https://github.com/simp/puppet-systemd
       branch: simp-master
